<resources>
    <string name="app_name">Birthday</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="connect">Connect</string>
    <plurals name="plurals_month">
        <item quantity="zero">months</item>
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <plurals name="plurals_year">
        <item quantity="zero">years</item>
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <string name="today_x_is">Today %1$s is</string>
    <string name="x_old">%1$s old!</string>
    <string name="nanit">Nanit</string>
    <string name="share_the_news">Share the news</string>
    <string name="avatar_image_of_x">Avatar image of %1$s</string>
    <string name="select_new_avatar">Select new avatar</string>
    <string name="choose_avatar_source">Choose avatar source</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="permission_needed">Permission needed</string>
    <string name="using_camera_as_source_requires_permission">Using Camera as source requires granting permission.</string>
    <string name="request_permission">Request permission</string>
    <string name="file_provider_authority">com.vladislaviliev.birthday.fileprovider</string>
</resources>