...
        modifier
            .fillMaxSize()
            .statusBarsPadding(),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {

        var ip by rememberSaveable { mutableStateOf("localhost") }
        var port by rememberSaveable { mutableStateOf("8080") }
        val isAuthorityValid = ip.isNotBlank() && null != port.toIntOrNull() && 0 < port.toInt()
        val onConnectClick = { if (isAuthorityValid) connect(ip, port.toInt()) }

        Spacer(Modifier.height(20.dp))
        Text(stringResource(R.string.connect_to_server), fontSize = 30.sp)
        Spacer(Modifier.height(10.dp))
...
